-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 21, 22
-
Component/s: hotspot
-
b06
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313298 | 21.0.1 | Matthias Baesken | P4 | Resolved | Fixed | b05 |
| JDK-8312895 | 17.0.9 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8318271 | 11.0.22 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
See for example
https://man.archlinux.org/man/fonts-conf.5
Some of them should be added to the list of reported environment variables in hs_err file because e.g. a bad setting for some of them can even lead sometimes to crashes.
- backported by
-
JDK-8312895 report some fontconfig related environment variables in hs_err file
-
- Resolved
-
-
JDK-8313298 report some fontconfig related environment variables in hs_err file
-
- Resolved
-
-
JDK-8318271 report some fontconfig related environment variables in hs_err file
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/855efc41
-
Commit
openjdk/jdk17u-dev/67c5150b
-
Commit
openjdk/jdk21u/75a792b1
-
Commit
openjdk/jdk/0ef03f12
-
Review
openjdk/jdk11u-dev/2193
-
Review
openjdk/jdk17u-dev/1614
-
Review
openjdk/jdk21u/17
-
Review
openjdk/jdk/14767