8311285: report some fontconfig related environment variables in hs_err file

Backport-of: 0ef03f122866f010ebf50683097e9b92e41cdaad